make some changes in navbar due to add again squad button and its subs

--- a/index.html
+++ b/index.html
@@ -14,24 +14,34 @@
 
         <!-- ?  Navbar start -->
         <div class="nav-section">
-            <div class="logo1 nav-logo"><img src="./logo/HBL-PSL-Logo_White.png" alt=""></div>
+            <div class="logo1 nav-logo"><img src="./logo/HBL-PSL-Logo_White.png" alt="psl logo"></div>
             <div class="links">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#teams">Teams</a></li>
                     <li><a href="#point-table">Point-table</a></li>
-                    <!-- <li><a href="#squard">Squard</a></li> -->
+
+                    <li class="dropdown">
+                        <a href="#squad" class="squad-btn">Squad</a>
+                        <ul class="squad-menu">
+                           <li><a href="">Peshawar Zalmi</a></li>
+                           <li><a href="">Islamabad United</a></li>
+                           <li><a href="">Quetta Gladiators</a></li>
+                           <li><a href="">Karachi Kings</a></li>
+                           <li><a href="">Multan Sultan</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#psl-winners">PSL-Winners</a></li>
                 </ul>
             </div>
             <div class="logo2 nav-logo">
-                <img src="./logo/icons8-pakistan-100.png" alt="">
+                <img src="./logo/icons8-pakistan-100.png" alt="pakistan flag">
             </div>
         </div>
 
         <!--? Home section start -->
         <div class="home-section">
-            <img src="./images/9889752.jpg" alt="" id="home">
+            <img src="./images/9889752.jpg" alt="psl banner" id="home">
         </div>
         
         
