add all teams html file and also add the squad of all teams , add footer to every page and hover effect to squad cards

--- a/index.html
+++ b/index.html
@@ -70,425 +70,6 @@
         </div>
       </div>
 
-      <!--?   Squad Section  -->
-      <div class="squad-section container container-y" id="squad">
-        <h1 class="title">Squad</h1>
-
-        <div class="squad-slider container-y">
-
-          <!-- <div class="squad-nav">
-            <ul class="container-x">
-              <button onclick="changeToPeshawar()">Peshawar Zalmi</button>
-              <li><a href="">Peshawar Zalmi</a></li>
-              <li><a href="">Islamabad United</a></li>
-              <li><a href="">Quetta Gladiators</a></li>
-              <li><a href="">Karachi Kings</a></li>
-              <li><a href="">Multan Sultan</a></li>
-            </ul>
-          </div> -->
-
-          <!--?    PESHAWAR ZALMI  -->
-          <div
-            class="squad-content container-x container-wrap"
-            id="peshawar-zalmi">
-            <div class="card-icon">
-                <img src="./logo/psl-peshawar-zalmi.png" alt="">
-            </div>
-
-            <div class="squad-card">
-              <img src="./images/players/Babar-Azam.jpeg" alt="" />
-              <h2>Babar Azam</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Saim-Ayub.jpeg" alt="" />
-              <h2>Saim Ayub</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Abdul-Samad.jpeg" alt="" />
-              <h2>Abdul Samad</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Haris.jpeg" alt="" />
-              <h2>Muhammad Haris</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Tom-Kohler-Cadmore.jpeg" alt="" />
-              <h2>Tom Kohler Cadmore</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Luke-Wood.jpeg" alt="" />
-              <h2>Luke Wood</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ali-Raza.jpg" alt="" />
-              <h2>Ali Raza</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Arif-Yaqoob.jpeg" alt="" />
-              <h2>Arif Yaqoob</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mehran-Mumtaz.jpeg" alt="" />
-              <h2>Mehran-Mumtaz</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Ali.jpeg" alt="" />
-              <h2>Muhammad Ali</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ahmed-Daniyal.jpeg" alt="" />
-              <h2>Ahemad Danyal</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Alzzari-Joseph.jpeg" alt="" />
-              <h2>Alzarri Joseph</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mitchell-Owen.jpeg" alt="" />
-              <h2>Mitchell Owen</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Maaz-Shafqat.jpeg" alt="" />
-              <h2>Maaz Sadaqat</h2>
-            </div>
-          </div>
-          <!--?    LAHORE QALANDERS  -->
-          <div
-            class="squad-content container-x container-wrap"
-            id="peshawar-zalmi">
-            <div class="card-icon">
-                <img src="./logo/psl-lahore-qalandars.png" alt="">
-            </div>
-
-            <div class="squad-card">
-              <img src="./images/players/Shaheen-Shah-Afridi.jpeg" alt="" />
-              <h2>Shaheen Shah Afridi</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Fakhar-Zaman.jpeg" alt="" />
-              <h2>Fakhar Zaman</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Haris-Rauf.jpeg" alt="" />
-              <h2>Haris Rauf</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players" alt="" />
-              <h2>Kusal Perera</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/s" alt="" />
-              <h2>Sikandar Raza</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Abdullah-Shafiq.jpeg" alt="" />
-              <h2>Abdullah Shafique</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/a" alt="" />
-              <h2>Asif Afridi</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/a" alt="" />
-              <h2>Asif Ali</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/m" alt="" />
-              <h2>Mohammad Naeem</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/s" alt="" />
-              <h2>Salman Mirza</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/m" alt="" />
-              <h2>Mohammad Azab</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/r" alt="" />
-              <h2>Rishad Hossain</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Zaman-Khan.jpeg" alt="" />
-              <h2>Zaman Khan</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/s" alt="" />
-              <h2>Sam Billings</h2>
-            </div>
-          </div>
-
-          <!-- ?   ISLAMABAD UNITED -->
-          <div  
-            class="squad-content container-x container-wrap"
-            id="islamabad-united"
-          >
-           <div class="card-icon">
-                <img src="./logo/psl-islamabad-united.png" alt="">
-            </div>
-
-            <div class="squad-card">
-              <img src="./images/players/Shahdab-Khan.jpeg" alt="" />
-              <h2>Shadab Khan</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Saim-Ayub.jpeg" alt="" />
-              <h2>Naseem Shah</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Abdul-Samad.jpeg" alt="" />
-              <h2>Azam Khan</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Haris.jpeg" alt="" />
-              <h2>Imad Waseem</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Tom-Kohler-Cadmore.jpeg" alt="" />
-              <h2>Jason Holder</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Luke-Wood.jpeg" alt="" />
-              <h2>Haider Ali</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ali-Raza.jpg" alt="" />
-              <h2>Salman Ali Agha</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Arif-Yaqoob.jpeg" alt="" />
-              <h2>Salman Irshad</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mehran-Mumtaz.jpeg" alt="" />
-              <h2>Rassie van der Dussen</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Ali.jpeg" alt="" />
-              <h2>Sahibzada Farhan</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ahmed-Daniyal.jpeg" alt="" />
-              <h2>Muhammad Shahzad</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Alzzari-Joseph.jpeg" alt="" />
-              <h2>Saad Masood</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mitchell-Owen.jpeg" alt="" />
-              <h2>Mohammad Nawaz</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Maaz-Shafqat.jpeg" alt="" />
-              <h2>Andries Gous</h2>
-            </div>
-          </div>
-
-          <!-- ?   KARACHI KINGS -->
-          <div
-            class="squad-content container-x container-wrap"
-            id="karachi-kings"
-          >
-
-           <div class="card-icon">
-                <img src="./logo/psl-karachi-kings.png" alt="">
-            </div>
-
-            <div class="squad-card">
-              <img src="./images/players/Babar-Azam.jpeg" alt="" />
-              <h2>David Warner</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Saim-Ayub.jpeg" alt="" />
-              <h2>Adam Milne</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Abdul-Samad.jpeg" alt="" />
-              <h2>Mohammad Abbas Afridi</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Haris.jpeg" alt="" />
-              <h2>Hasan Ali</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Tom-Kohler-Cadmore.jpeg" alt="" />
-              <h2>James Vince</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Luke-Wood.jpeg" alt="" />
-              <h2></h2>Khushdil Shah
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ali-Raza.jpg" alt="" />
-              <h2>Aamir Jamal</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Arif-Yaqoob.jpeg" alt="" />
-              <h2>Irfan Khan Niazi</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mehran-Mumtaz.jpeg" alt="" />
-              <h2>Shan Masood</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Ali.jpeg" alt="" />
-              <h2>Mir Hamza</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ahmed-Daniyal.jpeg" alt="" />
-              <h2>Tim Seifert</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Alzzari-Joseph.jpeg" alt="" />
-              <h2>Fawad Ali</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mitchell-Owen.jpeg" alt="" />
-              <h2>Mohammad Nabi</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Maaz-Shafqat.jpeg" alt="" />
-              <h2>Saad Baig</h2>
-            </div>
-          </div>
-
-          <!-- ?  QUETTA GLADIATORS -->
-          <div
-            class="squad-content container-x container-wrap"
-            id="peshawar-zalmi"
-          >
-           <div class="card-icon">
-                <img src="./logo/psl-quetta-gladiators.png" alt="">
-            </div>
-
-            <div class="squad-card">
-              <img src="./images/players/Babar-Azam.jpeg" alt="" />
-              <h2>Saud Shakeel (C)</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Saim-Ayub.jpeg" alt="" />
-              <h2>Faheem Ashraf</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Abdul-Samad.jpeg" alt="" />
-              <h2>Finn Allen</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Haris.jpeg" alt="" />
-              <h2>Abrar Ahmed</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Tom-Kohler-Cadmore.jpeg" alt="" />
-              <h2>Mohammad Amir</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Luke-Wood.jpeg" alt="" />
-              <h2>Rilee Rossouw</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ali-Raza.jpg" alt="" />
-              <h2>Mohammad Wasim Jnr</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Arif-Yaqoob.jpeg" alt="" />
-              <h2>Usman Tariq</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mehran-Mumtaz.jpeg" alt="" />
-              <h2>Khurram Shahzad</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Ali.jpeg" alt="" />
-              <h2>Hasan Nawaz</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ahmed-Daniyal.jpeg" alt="" />
-              <h2>Sean Abbott</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Alzzari-Joseph.jpeg" alt="" />
-              <h2>Ali Majid</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mitchell-Owen.jpeg" alt="" />
-              <h2>Khawaja Nafay</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Maaz-Shafqat.jpeg" alt="" />
-              <h2>Mark Chapman</h2>
-            </div>
-          </div>
-
-          <!-- ?  MULTAN SULTAN -->
-          <div
-            class="squad-content container-x container-wrap"
-            id="peshawar-zalmi"
-          >
-           <div class="card-icon">
-                <img src="./logo/psl-multan-sultan.png" alt="">
-            </div>
-
-            <div class="squad-card">
-              <img src="./images/players/Babar-Azam.jpeg" alt="" />
-              <h2>Mohammad Rizwan (C)</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Saim-Ayub.jpeg" alt="" />
-              <h2>Michael Bracewell</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Abdul-Samad.jpeg" alt="" />
-              <h2>Usama Mir</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Haris.jpeg" alt="" />
-              <h2>David Willey</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Tom-Kohler-Cadmore.jpeg" alt="" />
-              <h2>Iftikhar Ahmed</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Luke-Wood.jpeg" alt="" />
-              <h2>Usman Khan</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ali-Raza.jpg" alt="" />
-              <h2>Kamran Ghulam</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Arif-Yaqoob.jpeg" alt="" />
-              <h2>Mohammad Hasnain</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mehran-Mumtaz.jpeg" alt="" />
-              <h2>Akif Javed</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mohammad-Ali.jpeg" alt="" />
-              <h2>Ubaid Shah</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Ahmed-Daniyal.jpeg" alt="" />
-              <h2>Yasir Khan</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Alzzari-Joseph.jpeg" alt="" />
-              <h2>Josh Little</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Mitchell-Owen.jpeg" alt="" />
-              <h2>Shai Hope</h2>
-            </div>
-            <div class="squad-card">
-              <img src="./images/players/Maaz-Shafqat.jpeg" alt="" />
-              <h2>Faisal Akram</h2>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <!-- ?   POINT TABLE SECTION -->
       <div class="point-table-section container container-y" id="point-table">
         <h1 class="title">PSL 10 Point Table</h1>
@@ -557,6 +138,25 @@
       </div>
     </div>
 
+
+    <!-- ?   footer -->
+     <footer>
+      <div class="text">
+        <p>
+          Copyright © 2025 | Pakistan Super League | All Rights Reserved 
+        </p>
+      </div>
+      <div class="icons">
+        <img src="./logo/psl-peshawar-zalmi.png" alt="">
+        <img src="./logo/psl-islamabad-united.png" alt="">
+        <img src="./logo/psl-karachi-kings.png" alt="">
+        <img src="./logo/psl-multan-sultan.png" alt="">
+        <img src="./logo/psl-lahore-qalandars.png" alt="">
+        <img src="./logo/psl-quetta-gladiators.png" alt="">
+      </div>
+     </footer>
+
+     
     <script src="./app.js"></script>
   </body>
 </html>
