--- a/teams/islamabad.html
+++ b/teams/islamabad.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Islamabad United</title>
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../islamabad.css">
     <link
       rel="icon"
       href="../logo/psl-islamabad-united.png"
@@ -27,7 +28,7 @@
             <li><a href="../index.html#teams">Teams</a></li>
             <li><a href="../index.html#point-table">Point-table</a></li>
             <li><a href="../index.html#psl-winners">PSL-Winners</a></li>
-            <li class="dropdown">
+            <li class="dropdown dropdown2" >
               <select
                 name=""
                 id=""
@@ -38,8 +39,9 @@
                 <option value="peshawar.html">Peshawar Zalmi</option>
                 <option value="./islamabad.html">Islamabad United</option>
                 <option value="./quetta.html">Quetta Gladiators</option>
-                <option value="">Karachi Kings</option>
-                <option value="">Multan Sultan</option>
+                 <option value="./karachi.html">Karachi Kings</option>
+                <option value="./multan.html">Multan Sultan</option>
+                <option value="./lahore.html">Lahore Qalanders</option>
               </select>
             </li>
           </ul>
@@ -64,64 +66,84 @@
               <h1 class="title">Islamabad United</h1>
             </div>
 
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Shadab-Khan.jpg" alt="" />
               <h2>Shadab Khan (C)</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Naseem-Shah.jpg" alt="" />
               <h2>Naseem Shah</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Azam-Khan.jpg" alt="" />
               <h2>Azam Khan</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Imad-Wasim.jpg" alt="" />
               <h2>Imad Waseem</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Jason-Holder.jpg" alt="" />
               <h2>Jason Holder</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Haider-Ali.jpg" alt="" />
               <h2>Haider Ali</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Salman-Ali-Agha.jpg" alt="" />
               <h2>Salman Ali Agha</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Salman-Irshad.jpg" alt="" />
               <h2>Salman Irshad</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Rassie-van-der-Dussen.jpg" alt="" />
               <h2>Rassie van der Dussen</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Sahibzada-Farhan.jpg" alt="" />
               <h2>Sahibzada Farhan</h2>
             </div>
-            <div class="squad-card">
+            <div class="squad-card isl">
               <img src="../images/players/Mohammad-Shahzad-E.jpg" alt="" />
               <h2>Muhammad Shahzad</h2>
             </div>
-            <div class="squad-card">
-              <img src="./images/players/Alzzari-Joseph.jpeg" alt="" />
+            <div class="squad-card isl">
+              <img src="../images/players/Saad-Masood-E.jpg" alt="" />
               <h2>Saad Masood</h2>
             </div>
-            <div class="squad-card">
-              <img src="./images/players/Mitchell-Owen.jpeg" alt="" />
+            <div class="squad-card isl">
+              <img src="../images/players/Mohammad-Nawaz.jpg" alt="" />
               <h2>Mohammad Nawaz</h2>
             </div>
-            <div class="squad-card">
-              <img src="./images/players/Maaz-Shafqat.jpeg" alt="" />
+            <div class="squad-card isl">
+              <img src="../images/players/Andries-Gous.jpg" alt="" />
               <h2>Andries Gous</h2>
             </div>
-          </div>
+          </div>  
         
+
+
+          <!-- ?   footer -->
+     <footer>
+      <div class="text">
+        <p>
+          Copyright © 2025 | Pakistan Super League | All Rights Reserved 
+        </p>
+      </div>
+      <div class="icons">
+        <img src="../logo/psl-peshawar-zalmi.png" alt="">
+        <img src="../logo/psl-karachi-kings.png" alt="">
+        <img src="../logo/psl-islamabad-united.png" alt="">
+        <img src="../logo/psl-multan-sultan.png" alt="">
+        <img src="../logo/psl-lahore-qalandars.png" alt="">
+        <img src="../logo/psl-quetta-gladiators.png" alt="">
+      </div>
+     </footer>
+
+
       </div>
     </div>
   </body>
