--- a/teams/peshawar.html
+++ b/teams/peshawar.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../logo/psl-peshawar-zalmi.png" type="image/x-icon" />
 </head>
 <body>
-    <div class="banner2">
+    <div class="banner3  banner2">
 
    
     <!-- ?  Navbar start -->
@@ -26,14 +26,15 @@
             <li><a href="../index.html#teams">Teams</a></li>
             <li><a href="../index.html#point-table">Point-table</a></li>
             <li><a href="../index.html#psl-winners">PSL-Winners</a></li>
-            <li class="dropdown">
+            <li class="dropdown dropdown2">
               <select name="" id="" class="nav-dropdown" onchange="window.location.href = this.value;">
                 <option value="../index.html#teams">SQUAD</option>
                 <option value="peshawar.html">Peshawar Zalmi</option>
                 <option value="./islamabad.html">Islamabad United</option>
                 <option value="./quetta.html">Quetta Gladiators</option>
-                <option value="">Karachi Kings</option>
-                <option value="">Multan Sultan</option>
+                <option value="./karachi.html">Karachi Kings</option>
+                <option value="./multan.html">Multan Sultan</option>
+                <option value="./lahore.html">Lahore Qalanders</option>
               </select>
             </li>
           </ul>
@@ -48,10 +49,92 @@
 
 
       <!-- ?   SQUAD -->
+       <div class="squad-section" id="squad">
 
-      
+      <!--?    PESHAWAR ZALMI  -->
+          <div
+            class="squad-content container-x container-wrap"
+            id="peshawar-zalmi">
+            <div class="card-icon">
+                <img src="../logo/psl-peshawar-zalmi.png" alt="">
+            </div>
 
+            <div class="squad-card psh">
+              <img src="../images/players/Babar-Azam.jpg" alt="" />
+              <h2>Babar Azam (C)</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Saim-Ayub.jpg" alt="" />
+              <h2>Saim Ayub</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Abdul-Samad.jpg" alt="" />
+              <h2>Abdul Samad</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Mohammad-Haris.jpg" alt="" />
+              <h2>Muhammad Haris</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Tom-Kohler-Kadmore.jpg" alt="" />
+              <h2>Tom Kohler Cadmore</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Luke-Wood.jpg" alt="" />
+              <h2>Luke Wood</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Ali-Raza.jpg" alt="" />
+              <h2>Ali Raza</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Arif-Yaqoob.jpg" alt="" />
+              <h2>Arif Yaqoob</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Mehran-Mumtaz.jpg" alt="" />
+              <h2>Mehran-Mumtaz</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Mohammad-Ali.jpg" alt="" />
+              <h2>Muhammad Ali</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Ahmed-Daniyal.jpg" alt="" />
+              <h2>Ahemad Danyal</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Alzzari-Joseph.jpg" alt="" />
+              <h2>Alzarri Joseph</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Mitchell-Owen.jpg" alt="" />
+              <h2>Mitchell Owen</h2>
+            </div>
+            <div class="squad-card psh">
+              <img src="../images/players/Maaz-Shafqat.jpg" alt="" />
+              <h2>Maaz Sadaqat</h2>
+            </div>
+          </div>
 
+                <!-- ?   footer -->
+     <footer>
+      <div class="text">
+        <p>
+          Copyright © 2025 | Pakistan Super League | All Rights Reserved 
+        </p>
+      </div>
+      <div class="icons">
+        <img src="../logo/psl-peshawar-zalmi.png" alt="">
+        <img src="../logo/psl-karachi-kings.png" alt="">
+        <img src="../logo/psl-islamabad-united.png" alt="">
+        <img src="../logo/psl-multan-sultan.png" alt="">
+        <img src="../logo/psl-lahore-qalandars.png" alt="">
+        <img src="../logo/psl-quetta-gladiators.png" alt="">
+      </div>
+     </footer>
+     
+          </div>
        </div>
 </body>
 </html>
