some changes in lahore html file

--- a/teams/lahore.html
+++ b/teams/lahore.html
@@ -73,7 +73,7 @@
               <h2>Haris Rauf</h2>
             </div>
             <div class="squad-card lhr">
-              <img src="/./images/players/Kusal-Perea.jpg" alt="" />
+              <img src="../images/players/Kusal-Perea.jpg" alt="" />
               <h2>Kusal Perera</h2>
             </div>
             <div class="squad-card lhr">
